# volatilityPortfolioManager

./: .clang-format  CMakeLists.txt
include/: extractor.h  portfolio_manager.h  stock_manager.h  volatilityFormula.h  volatilityParse.h
src/: CMakeLists.txt  extractor.cpp  main.cpp  volatilityFormula.cpp  volatilityParse.cpp
